# ui

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md
adapters/editor/: CMakeLists.txt
adapters/editor/include/einheit/adapters/editor/: ui_adapter.h
adapters/editor/src/: adapter.cc
adapters/editor/templates/editor/: page.html.inja
adapters/example/: CMakeLists.txt
adapters/example/include/einheit/adapters/example/: ui_adapter.h
adapters/example/src/: adapter.cc
adapters/example/templates/example/: counter_card.html.inja  dashboard.html.inja
adapters/hd_relay/: CMakeLists.txt
adapters/hd_relay/include/einheit/adapters/hd_relay/: hd_client.h  ui_adapter.h
adapters/hd_relay/src/: adapter.cc  hd_client.cc
adapters/hd_relay/templates/hd/: audit.html.inja  counters.html.inja  overview.html.inja  peer_row.html.inja  peers.html.inja
adapters/shell/: CMakeLists.txt
adapters/shell/include/einheit/adapters/shell/: ui_adapter.h
adapters/shell/src/: adapter.cc  pty_session.cc  pty_session.h
adapters/shell/templates/shell/: terminal.html.inja
assets/: README.note  base.css  copy.js  filter.js  plot.js  sidebar.js  tabs.js  time_range.js  toasts.js
assets/cm6/: codemirror.js
assets/editor/: editor.js
assets/shell/: terminal.js
binaries/einheit-shell-launcher/src/: main.cc  sandbox.cc  sandbox.h
binaries/einheit-shell-launcher/tests/: test_argv.cc
binaries/einheit-ui/src/: main.cc
cmake/: einheit_shell_launcher_binary.cmake  einheit_ui_binary.cmake  lib_ui_core.cmake  lib_ui_render.cmake
cmake/3rd_party_libs/: fetch.cmake
include/einheit/ui/: adapter.h  diff.h  error.h  route.h  server.h  sparkline.h  static_files.h  stream.h  theme.h
include/einheit/ui/render/: escape.h  template_engine.h
src/: adapter.cc  diff.cc  route.cc  server.cc  sparkline.cc  static_files.cc  stream.cc
src/render/: escape.cc  template_engine.cc  theme.cc
templates/: layout.html.inja  settings.html.inja  theme.css.inja  widgets.html.inja
templates/partials/: badge.html.inja  button.html.inja  card.html.inja  copy.html.inja  diff.html.inja  empty.html.inja  error.html.inja  filter.html.inja  icon.html.inja  log_entry.html.inja  plot.html.inja  progress.html.inja  progress_ring.html.inja  sidebar.html.inja  skeleton.html.inja  stat_tile.html.inja  status.html.inja  table.html.inja  tabs.html.inja  time_range.html.inja  toast.html.inja
tests/: CMakeLists.txt  test_escape.cc  test_example_adapter.cc  test_hd_relay_adapter.cc  test_partials.cc  test_route.cc  test_shell_adapter.cc  test_stream.cc  test_template_engine.cc  test_theme.cc
tools/: build-cm6.sh
